# slidemaker

./: AGENTS.md  README.md  pyproject.toml
runs/20260121_184118_llm_latency/: index.json  intake.md  outline.json  report.html  slides.json  spec.json
runs/20260121_184118_llm_latency/attempts/00_cover/: attempt_001.json  attempt_002.json
runs/20260121_184118_llm_latency/attempts/01_what_makes_slow/: attempt_001.json  attempt_002.json  attempt_003.json  attempt_004.json
runs/20260121_184118_llm_latency/attempts/02_metrics/: attempt_001.json
runs/20260121_184118_llm_latency/attempts/02_request_timing/: attempt_001.json
runs/20260121_184118_llm_latency/attempts/03_end_to_end/: attempt_001.json
runs/20260121_184118_llm_latency/attempts/03_latency_budget/: attempt_001.json
runs/20260121_184118_llm_latency/attempts/04_output_dominates/: attempt_001.json  attempt_002.json  attempt_003.json
runs/20260121_184118_llm_latency/attempts/04_tradeoffs/: attempt_001.json
runs/20260121_184118_llm_latency/attempts/05_phases/: attempt_001.json
runs/20260121_184118_llm_latency/attempts/05_tradeoffs/: attempt_001.json
runs/20260121_184118_llm_latency/attempts/06_latency_throughput/: attempt_001.json  attempt_002.json  attempt_003.json
runs/20260121_184118_llm_latency/attempts/06_output_dominates/: attempt_001.json
runs/20260121_184118_llm_latency/critiques/: 20260121_195356_gpt5.2.md  20260121_204751_user_feedback.md
src/slidemaker/: cli.py  exporter.py  openai_client.py  pipeline.py  prompting.py  report.py  store.py  utils.py
(+63 files in other folders)
