[project]
name = "slidemaker"
version = "0.1.0"
description = "Generate slide image sequences with GPT-image-1.5 and automated grading."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Jeff Harris" }
]

dependencies = [
  "openai>=1.40.0",
  "img2pdf>=0.5.1",
]

[project.scripts]
slidemaker = "slidemaker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slidemaker"]
